[project]
name = "clusterbh"
version = "0.2.0"
description = "Fast model for GC with BHs"
authors = [
    {name = "Fotis Fronimos", email = "fotisfronimos@icc.ub.edu"},
    {name = "Mark Gieles", email = "mgieles@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["clusterbh"]
license = {file = "LICENSE"}
dependencies = [
    "scipy",
    "numpy",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "License :: OSI Approved :: BSD License",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Astronomy",
]

[project.urls]
repository = "https://github.com/ffronimo/clusterbh"
# documentation = "https://clusterbh.readthedocs.org"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["clusterbh"]
